# sideshow

./: .coveragerc  .envrc  .gitignore  .gitlab-ci.yml  .sops.yaml  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml
.devcontainer/: devcontainer.json
fixtures/: token_data.json  token_hour_data_2024-08-28.json
infra/common/: .env  compose.yml
infra/dev/: .env  compose.yml  entrypoint.sh  start-runserver.sh
sideshow/: __init__.py  app.py  cli.py  main.py  manage.py
sideshow/apps/tokens/: admin.py  graphapi.py  models.py  test_tokens.py
sideshow/apps/tokens/migrations/: 0001_initial.py
sideshow/apps/users/: admin.py  models.py
sideshow/apps/users/migrations/: 0001_initial.py
sideshow/apps/users/templates/: email_base.html
sideshow/scripts/: create_fixtures.py  token_data.py
sideshow/settings/: project.py  test_settings.py  urls.py
sideshow/utils/: admin.py  auth.py  email.py  enums.py  models.py
sideshow/views/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
sideshow/views/src/: enums.ts
sideshow/views/src/components/: ServerPages.tsx  utils.ts
sideshow/views/src/pages/index/: controller.py  page.tsx
